--- a/roles/playbooks/task5.yml
+++ b/roles/playbooks/task5.yml
@@ -6,3 +6,4 @@
     - { role: fpm, tags: [php]}
     - { role: upgrade, tags: [upgrade]}
     - { role: jira, tags: [jira]}
+    - { role: revers-config, tags: [proxy]}
